--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,6 +19,11 @@
 			font-family : Arial, Helvetica, sans-serif;
 		}
 
+		h3{
+			color : black;
+			text-align : center;
+			font-family : Arial, Helvetica, sans-serif;
+		}
 		body{
 			background-color : lightblue;
 			text-align : center;
@@ -93,6 +98,7 @@
 	<h2>Temperature : {{temp_in_C}} &#176 C </h2>
 	<h2>Heat Index : {{heatIndex_in_C}} &#176 F </h2>
 	<br>
+	<h3>Updated Today : {{dateToday}} </h3>
 	<br>
 	<br>
 	<br>
